tests/NormalTests/paczka2/big_fuzzy/59544117.err
Error in line 1: 2GT54 S167 19,8
Error in line 16: H73fEzfLCxH S167 94,7
Error in line 12: oqOa S167 29,0
Error in line 19: yAdb0A6pDLG S975 83,6
Error in line 34: S975 S975 7,7
Error in line 43: 2GT54 S167 81,17
Error in line 35: hG7 S975 58,6
Error in line 46: oqOa A610 410,5
Error in line 47: hG7 S767 97,0
Error in line 63: 2GT54 S767 72,2
Error in line 70: H73fEzfLCxH S767 13,26
Error in line 71: oqOa S167 252,3
Error in line 69: 2GT54 A610 32,4
Error in line 88: hG7 A610 60,05
Error in line 77: oqOa S975 84,9
Error in line 80: H73fEzfLCxH S767 254,2
Error in line 102: n0sQNf733 A610 88,7
Error in line 105: n0sQNf733 S767 82,4
Error in line 98: hG7 A610 252,0
Error in line 106: n0sQNf733 S975 39,7
Error in line 112: oqOa S767 32,6
Error in line 107: hG7 S767 23,9
Error in line 114: S975 A610 137,3
Error in line 120: n0sQNf733 A610 79,2
Error in line 122: hG7 S167 72,9
Error in line 124: S975 S767 83,5
Error in line 131: H73fEzfLCxH S767 16,4
Error in line 135: S975 S167 66,7
Error in line 141: S975 S975 94,9
Error in line 140: 2GT54 S767 16,6
Error in line 154: S975 S167 15,04
Error in line 143: n0sQNf733 S767 82,7
Error in line 151: S975 S767 119,6
Error in line 160: S975 A610 91,9
Error in line 153: 2GT54 S975 329,4
Error in line 171: n0sQNf733 S975 89,82
Error in line 172: hG7 S167 98,1
Error in line 182: H73fEzfLCxH A610 39,6
Error in line 204: S975 A610 19,22
Error in line 197: H73fEzfLCxH S167 89,5
Error in line 201: n0sQNf733 A610 35,7
Error in line 212: n0sQNf733 S767 85,4
Error in line 215: oqOa A610 59,4
Error in line 220: S975 A610 70,8
Error in line 222: S975 S975 81,8
Error in line 228: S975 S167 94,9
Error in line 230: yAdb0A6pDLG A610 3,3
Error in line 248: S975 S167 28,0
